# is-kinectV2

./: CMakeLists.txt  kinect_capture.cpp
build-new/: CMakeCache.txt  Makefile  cmake_install.cmake  kinect_capture
build-new/imagens_kinect/p1g1/Depth_Maps/: depth_frame_0.npy  depth_frame_1.npy  depth_frame_10.npy  depth_frame_11.npy  depth_frame_12.npy  depth_frame_13.npy  depth_frame_14.npy  depth_frame_15.npy  depth_frame_16.npy  depth_frame_17.npy  depth_frame_18.npy  depth_frame_19.npy  depth_frame_2.npy  depth_frame_20.npy  depth_frame_21.npy  depth_frame_22.npy  depth_frame_23.npy  depth_frame_24.npy  depth_frame_25.npy  depth_frame_26.npy  depth_frame_27.npy  depth_frame_28.npy  depth_frame_29.npy  depth_frame_3.npy  depth_frame_30.npy  depth_frame_31.npy  depth_frame_32.npy  depth_frame_33.npy  depth_frame_34.npy  depth_frame_35.npy  depth_frame_36.npy  depth_frame_37.npy  depth_frame_38.npy  depth_frame_39.npy  depth_frame_4.npy  depth_frame_40.npy  depth_frame_41.npy  depth_frame_42.npy  depth_frame_43.npy  depth_frame_44.npy  (+60 more)
build-new/imagens_kinect/p1g1/IR_imgs/: ir_frame_0  ir_frame_1  ir_frame_10  ir_frame_11  ir_frame_12  ir_frame_13  ir_frame_14  ir_frame_15  ir_frame_16  ir_frame_17  ir_frame_18  ir_frame_19  ir_frame_2  ir_frame_20  ir_frame_21  ir_frame_22  ir_frame_23  ir_frame_24  ir_frame_25  ir_frame_26  ir_frame_27  ir_frame_28  ir_frame_29  ir_frame_3  ir_frame_30  ir_frame_31  ir_frame_32  ir_frame_33  ir_frame_34  ir_frame_35  ir_frame_36  ir_frame_37  ir_frame_38  ir_frame_39  ir_frame_4  ir_frame_40  ir_frame_41  ir_frame_42  ir_frame_43  (+61 more)
(+100 files in other folders)
